apps/media-server/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media-server
  labels:
    app: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: k8s-mediaserver
          image: docker.io/linuxserver/radarr:6.4.4
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /radarr/ping
              port: 7878
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 20
          ports:
            - name: radarr-port
              containerPort: 7878
              protocol: TCP
          volumeMounts:
            - name: pvc-radarr-config
              mountPath: /config
            - name: mediaserver-volume
              mountPath: /data
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
      volumes:
        - name: mediaserver-volume
          persistentVolumeClaim:
            claimName: mediaserver-rwo-pvc
        - name: pvc-radarr-config
          persistentVolumeClaim:
            claimName: pvc-radarr-config
        - name: init-files-radarr
          configMap:
            defaultMode: 493
            name: init-radarr-cm
